--- a/azure/Pulumi.yaml
+++ b/azure/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: python
   options:
     virtualenv: venv
-description: A minimal Azure Native Python Pulumi program
+description: Ejemplo de pulumi con python y azure
