:fire: REQ-02: Added files for GCP with pulumi

--- a/gcp/Pulumi.dev.yaml
+++ b/gcp/Pulumi.dev.yaml
@@ -1,2 +1,7 @@
 config:
   gcp:project: pulumi-28324
+  gcpImpl:values:
+    proyecto: pulumi
+    subnet_address_prefixes:
+      - 10.0.1.0/24
+      - 10.0.2.0/24
