--- a/gcp/Pulumi.yaml
+++ b/gcp/Pulumi.yaml
@@ -1,6 +1,6 @@
-name: gcp
+name: gcpImpl
 runtime:
   name: python
   options:
     virtualenv: venv
-description: A minimal Google Cloud Python Pulumi program
+description: Ejemplo de pulumi con python y gcp
